[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

crossbeam = "0.8.2"
warp = "0.3.5"
parking_lot = { version = "0.12.1", features = ["default"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }

async-std = {version = "1.12.0",features = ["attributes","tokio1"]}