[package]
name = "network_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
parking_lot = { version = "0.12.1", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"]}
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"]}
serde_json = "1.0"
pnet = "0.33.0"
lazy_static = "1.4.0"
crossbeam = "0.8"
async-std = { version = "1.10", features = ["attributes","tokio1"] }

